# augury

./: ASTROLOGY_INTEGRATION_SPEC.md  ICHING_INTEGRATION_SPEC.md  README.md  SESSION_SUMMARY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
docs/: DEPTH_ENHANCEMENT_SPEC.md  GARDEN_COMMANDS.txt  IMPLEMENTATION_RUNBOOK.md
docs/monetization/: MONETIZATION_SPEC.md
skills/hermes/: SKILL.md
src/augury/: __init__.py  cards.py  cli.py  config.py  discord.py  engine.py  iching.py  interpreter.py  oracle_render.py  shell.py
src/augury/systems/: __init__.py
src/augury/systems/iching/: __init__.py  app.py  cli.py  data.py  engine.py
tests/: test_cli.py  test_config.py
