[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "augury"
version = "0.3.0"
description = "Terminal divination suite with tarot, I Ching, a TUI, CLI, and optional Discord formatter."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "cassette, aka maps" },
]
dependencies = [
  "rich>=13.7",
]
keywords = ["tarot", "i-ching", "cli", "tui", "discord"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Artistic Software",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://cassette.help"
Repository = "https://github.com/nosleepcassette/augury"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
augury = "augury.cli:main"
augury-discord = "augury.discord:main"
iching = "augury.iching:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"augury.systems.iching" = ["data/*.js"]
